<resources>
    <string name="app_name">android-kotlin-ui-master</string>
    <string name="google_api_key">AIzaSyCTGTGu4mLKKSRKiA-5qibUlKewkjNlqMw</string>

    <!-- Navigation Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_android_view">Android View</string>
    <string name="nav_google">Google Api</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">About US</string>
    <string name="nav_logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">Suresh Chandak</string>

    <string name="add_user_activity_title">Add User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>

    <!-- Bottom Navigation view -->
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!-- Android Emoji Library -->
    <string name="emoji_text_view">Emoji TextView %s</string>
    <string name="emoji_edit_text">Emoji EditText %s</string>
    <string name="emoji_button">Emoji Button %s</string>
    <string name="regular_text_view">Regular TextView %s</string>
    <string name="custom_text_view">Custom TextView %s</string>

    <!-- MVP -->
    <string name="user_name_">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>

    <!-- ActionBar Title -->
    <string name="biometric_title" translatable="false">Login</string>
    <string name="biometric_subtitle" translatable="false">Login with your Fingerprint</string>
    <string name="biometric_description" translatable="false">Place your finger on the device home button to verify your identity</string>
    <string name="biometric_negative_button_text" translatable="false">CANCEL</string>

    <string name="biometric_error_sdk_not_supported" translatable="false">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported" translatable="false">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available" translatable="false">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted" translatable="false">Permission is not granted by user</string>
    <string name="biometric_failure" translatable="false">Login not successful!</string>
    <string name="biometric_cancelled" translatable="false">Authentication cancelled by user</string>
    <string name="biometric_success" translatable="false">Login Successful</string>
    <string name="mvp_architecture">MVP Architecture</string>
    <string name="bottom_navigation_view">Bottom Navigation View</string>
    <string name="android_emoji_library">Android Emoji Library</string>
    <string name="retrofit">Retrofit</string>
    <string name="without_ui_activity">Without UI Activity</string>
    <string name="asynctask">AsyncTask</string>
    <string name="custom_view">Custom View</string>
    <string name="android_keystore">Android KeyStore</string>
    <string name="biometric_auth">Biometric Auth</string>
    <!-- End -->

</resources>
