<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".androidView.AndroidViewFragment">

    <data>

        <variable
            name="vm"
            type="com.kotlin.ui.androidView.AndroidViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guidelineBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_16" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_16" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/mvpButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onBottomMVPClick}"
                android:text="@string/mvp_architecture"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toTopOf="parent" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/bottomNavigationButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onBottomNavigationClick}"
                android:text="@string/bottom_navigation_view"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/mvpButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/emojiButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onAndroidEmojiLibraryClick}"
                android:text="@string/android_emoji_library"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/bottomNavigationButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/retrofitButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onRetrofitClick}"
                android:text="@string/retrofit"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/emojiButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/withoutUIActivityButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onWithoutUIActivityClick}"
                android:text="@string/without_ui_activity"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/retrofitButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/asyncTaskButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onAsyncTaskActivityClick}"
                android:text="@string/asynctask"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/withoutUIActivityButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/customViewButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onCustomViewActivityClick}"
                android:text="@string/custom_view"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/asyncTaskButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/keyStoreButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onKeyStoreActivityClick}"
                android:text="@string/android_keystore"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/customViewButton" />

            <com.kotlin.customview.widgets.CustomButton
                android:id="@+id/biometricAuthButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:onClick="@{vm::onBiometricAuthActivityClick}"
                android:text="@string/biometric_auth"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineBegin"
                app:layout_constraintTop_toBottomOf="@+id/keyStoreButton" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>